@@ -5437,6 +5437,8 @@ getshell(char *cmd)
     Buffer *buf;
 
     buf = loadcmdout(cmd, loadBuffer, NULL);
+    if (buf == NULL)
+	return NULL;
     buf->filename = cmd;
     buf->buffername = Sprintf("%s %s", SHELLBUFFERNAME,
 			      conv_from_system(cmd))->ptr;
